<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@color/ltgray"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="Po_wifi_area"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/Po_IV1_top"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_appwidget_settings_wifi_off_holo"
                android:text="WiFi" />

            <ImageView
                android:id="@+id/Po_IV1_below"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="12"
                android:src="@drawable/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="Po_BT_area"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/Po_IV2_top"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_appwidget_settings_bluetooth_off_holo"
                android:text="BT" />

            <ImageView
                android:id="@+id/Po_IV2_below"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="12"
                android:src="@drawable/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="Po_GPS_area"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/Po_IV3_top"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_appwidget_settings_gps_off_holo"
                android:text="GPS" />

            <ImageView
                android:id="@+id/Po_IV3_below"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="12"
                android:src="@drawable/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="Po_thermal_area"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/Po_IV4_top"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/thermal_printer_xx"
                android:text="Thermal" />

            <ImageView
                android:id="@+id/Po_IV4_below"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="12"
                android:src="@drawable/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="Po_finger_area"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/Po_IV5_top"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/finger_printer__xx"
                android:text="finger" />

            <ImageView
                android:id="@+id/Po_IV5_below"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="12"
                android:src="@drawable/white" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@color/transparent"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="Po_NFC_area"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/Po_IV6_top"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/nfc_checkpoint2_x"
                android:text="NFC/SCR" />

            <ImageView
                android:id="@+id/Po_IV6_below"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="12"
                android:src="@drawable/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="Po_Barcode_area"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/Po_IV7_top"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/barcode_canner_x"
                android:text="Barcode" />

            <ImageView
                android:id="@+id/Po_IV7_below"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="12"
                android:src="@drawable/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="Po_USBGSM_area"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/Po_IV8_top"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/gsm_x"
                android:text="USB GSM" />

            <ImageView
                android:id="@+id/Po_IV8_below"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="12"
                android:src="@drawable/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="Po_MultiTouch_area"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/Po_IV9_top"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/touch_x"
                android:text="Multi Touch" />

            <ImageView
                android:id="@+id/Po_IV9_below"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="12"
                android:src="@drawable/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="Po_USB_GPS_area"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/Po_IV10_top"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/gps_receiving_x"
                android:text="USB GPS" />

            <ImageView
                android:id="@+id/Po_IV10_below"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="12"
                android:src="@drawable/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonConnect"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/connect" />

        <Button
            android:id="@+id/buttonDisconnect"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/disconnect" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonTestText"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/testtext" />

        <Button
            android:id="@+id/buttonTestBarCode"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/testbarcode" />

        <Button
            android:id="@+id/buttonTestQrCode"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/testqrcode" />

        <Button
            android:id="@+id/buttonTestPic"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/testpic" />

        <Button
            android:id="@+id/buttonQueryStatus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/querystatus"
            android:visibility="gone" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>